--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,11 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>Nguyễn Hữu Phúc</title>
   <style>
     .anh{
       width: 8%;float: left;
-      margin: 10px;margin-left: 90px;
+      margin: 10px;margin-left: 65px;
       border-radius: 100px;
     }
     .anh_Phuc{
@@ -23,7 +23,7 @@
     .Nut_Facebook{
       background: #3b5998;
       border: none;font-size: 18px;
-      width: 380px;height: 60px;
+      width: 380px;height: 60px;color: #010101;
       border-radius: 50px;margin-bottom: 10px;margin-top: 20px;
 
     }
@@ -32,7 +32,7 @@
     }
     .Nut_Instagram{
       background: #bc2a8d;
-      border: none;
+      border: none;color: #010101;
       width: 380px;height: 60px;
       border-radius: 50px;margin-bottom: 10px;margin-top: 20px;
 
@@ -52,7 +52,7 @@
     }
     .Nut_Youtube{
       background: #ff1a1a;
-      border: none;
+      border: none;color: #010101;
       width: 380px;height: 60px;
       border-radius: 50px;margin-bottom: 10px;margin-top: 20px;
 
@@ -62,7 +62,7 @@
     }
     .Nut_Pubgmobile{
       background: #80aaff;
-      border: none;
+      border: none;color: #010101;
       width: 380px;height: 60px;
       border-radius: 50px;margin-bottom: 10px;margin-top: 20px;
 
