--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
 <body class="container " >
 <div class="GD_background">
 
-  <img class="anh_Phuc" src="https://uphinh.vn/images/2022/03/11/96b84804586e13e567cb740613d816cb.jpg" alt="96b84804586e13e567cb740613d816cb.jpg" border="0" />
+  <img class="anh_Phuc" src="https://files.fm/thumb_show.php?i=gwh5tbwz3" alt="96b84804586e13e567cb740613d816cb.jpg" border="0" />
   <H1>Nguyễn Hữu Phúc - Phúc Béo</H1>
 
     <div style="text-align: center">
